# Pong-Clone

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: Ball.cpp.6E573D3D3FABA437.idx  Ball.h.9057D60119A58E38.idx  GTexture.cpp.E9D42CD40A658C1E.idx  GTexture.h.5BBA7ADB39ACD3E7.idx  Game.cpp.BD398174431577D2.idx  Game.h.86283CE7EF36FCAE.idx  Game.h.A2E8E139F180837D.idx  Global.h.A6CC4F5923478CB8.idx  Global.h.E0A5611618194E05.idx  Paddle.cpp.8A09DD423AA50229.idx  Paddle.h.3FC9A3EDC21864E5.idx  Paddle.h.A25196D070CB20F0.idx  main.cpp.323E4DCF0B949312.idx
include/: Ball.h  GTexture.h  Game.h  Global.h  Paddle.h
src/: Ball.cpp  GTexture.cpp  Game.cpp  Game.h  Global.h  Paddle.cpp  Paddle.h  main.cpp
